4.56

- Added: d_sm_vec_weighting to dom_settings table (one can set the weight for selectRandomWeight function for planes, helicopters, tanks and other vehicles in there)
- Added: Parameter d_WithVoicesDisabled to disable voices, currently only works for VN map using their module, by longtimegamer
- Changed: Side mission bonus vehicles are no longer selected consecutively
- Changed: Recruit terminal in Altis Blufor version moved closer to spawn point
- Fixed: If d_with_ranked was set to 2 (Ranked mode on but weapons not ranked) d_remove_from_arsenal was not processed
- Fixed: Main target mission buildings got destroyed 30 seconds after creation, fixes #297
- Fixed: Snipers were not being created with new dynamic parameter
- Fixed: HUD with duplicated character "Score::"
- Fixed: Vehicle markers are not shown when player AI is alone in vehicles
- Fixed: When AI aggressive shoot (d_ai_aggressiveshoot) was activated AI was shooting at unconscious players
- Tweaked: Spawn factor variables