@@ -561,6 +561,20 @@ class Params {
 		default = 0;
 		texts[] = {"$STR_DOM_MISSIONSTRING_11","350","450","550","650","750","850","1000"};
 	};
+	
+	class d_pnspace_msave {
+		title = "$STR_DOM_MISSIONSTRING_2084";
+		values[] = {0,1};
+		default = 1;
+		texts[] = {"$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_922"};
+	};
+	
+	class d_pnspace_msave_auto {
+		title = "$STR_DOM_MISSIONSTRING_2085";
+		values[] = {0,1};
+		default = 1;
+		texts[] = {"$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_922"};
+	};
 
 	class d_params_dl_8_env {
 		title = "$STR_DOM_MISSIONSTRING_1574_ENV";
