@@ -13,12 +13,12 @@ item8[] = {"Allways",8,218,-36.349953,375.696259,53.650047,425.696259,0.000000,"
 item9[] = {"Check",2,250,-36.349949,461.762817,53.650066,511.762817,0.000000,"Check"};
 item10[] = {"Not_Null_Wreck",4,218,-36.349953,561.631714,53.650047,611.631714,1.000000,"Not Null Wreck"};
 item11[] = {"Delay_2",4,218,110.701157,372.903015,200.701157,422.903015,0.000000,"Delay 2"};
-item12[] = {"Rebuild",2,4346,-34.777206,652.850647,55.222801,702.850647,0.000000,"Rebuild"};
+item12[] = {"Rebuild",2,250,-34.777206,652.850647,55.222801,702.850647,0.000000,"Rebuild"};
 item13[] = {"Delay_Rebuildtim",4,218,245.170380,648.918762,384.711609,706.782471,0.000000,"Delay Rebuildtime"};
 item14[] = {"Unlock_Vehicle",2,250,270.727417,446.821747,360.727417,496.821747,0.000000,"Unlock Vehicle"};
 item15[] = {"Allways",8,218,267.188721,280.897766,357.188751,330.897766,0.000000,"Allways"};
 item16[] = {"_",4,218,28.118450,766.373047,118.118446,816.373047,0.000000,""};
-item17[] = {"_",2,250,180.609940,767.583252,270.609955,817.583252,0.000000,""};
+item17[] = {"_",2,4346,180.609940,767.583252,270.609955,817.583252,0.000000,""};
 link0[] = {0,1};
 link1[] = {0,3};
 link2[] = {1,2};
@@ -40,7 +40,7 @@ link17[] = {15,6};
 link18[] = {16,17};
 link19[] = {17,13};
 globals[] = {0.000000,0,0,0,0,640,480,1,22,6316128,1,-455.676758,559.340210,904.643738,-90.048965,848,832,1};
-window[] = {0,-1,-1,-1,-1,1128,632,2779,124,1,866};
+window[] = {0,-1,-1,-1,-1,1134,130,2277,130,1,866};
 *//*%FSM</HEAD>*/
 class FSM
 {
@@ -216,14 +216,12 @@ class FSM
                          "};" \n
                          "deleteVehicle _wreck;" \n
                          "" \n
-                         "if (d_database_found) then {" \n
-                         "	if (!d_tt_ver) then {" \n
-                         "		d_bonus_vecs_db = d_bonus_vecs_db - [objNull];" \n
-                         "	} else {" \n
-                         "		switch (_rep_station_side) do {" \n
-                         "			case blufor: {d_bonus_vecs_db_w = d_bonus_vecs_db_w - [objNull]};" \n
-                         "			case opfor: {d_bonus_vecs_db_e = d_bonus_vecs_db_e - [objNull]};" \n
-                         "		};" \n
+                         "if (!d_tt_ver) then {" \n
+                         "	d_bonus_vecs_db = d_bonus_vecs_db - [objNull];" \n
+                         "} else {" \n
+                         "	switch (_rep_station_side) do {" \n
+                         "		case blufor: {d_bonus_vecs_db_w = d_bonus_vecs_db_w - [objNull]};" \n
+                         "		case opfor: {d_bonus_vecs_db_e = d_bonus_vecs_db_e - [objNull]};" \n
                          "	};" \n
                          "};" \n
                          "" \n
@@ -353,14 +351,13 @@ class FSM
                          "_timenow = ([time, serverTime] select isMultiplayer) + _totaltime;" \n
                          "_rep_station setVariable [""d_curreptime"", _timenow, true];" \n
                          "" \n
-                         "if (d_database_found) then {" \n
-                         "	if (!d_tt_ver) then {" \n
-                         "		d_bonus_vecs_db pushBack _new_vec;" \n
-                         "	} else {" \n
-                         "		switch (_rep_station_side) do {" \n
-                         "			case blufor: {d_bonus_vecs_db_w pushBack _new_vec};" \n
-                         "			case opfor: {d_bonus_vecs_db_e pushBack _new_vec};" \n
-                         "		};" \n
+                         "" \n
+                         "if (!d_tt_ver) then {" \n
+                         "	d_bonus_vecs_db pushBack _new_vec;" \n
+                         "} else {" \n
+                         "	switch (_rep_station_side) do {" \n
+                         "		case blufor: {d_bonus_vecs_db_w pushBack _new_vec};" \n
+                         "		case opfor: {d_bonus_vecs_db_e pushBack _new_vec};" \n
                          "	};" \n
                          "};" \n
                          ""/*%FSM</STATEINIT""">*/;
